# my-os

./: .clang-tidy  .gitignore  Cargo.toml  GNUmakefile  README.md  bacon.toml  build.rs  cross-compiler.sh  demo.app  gcc.config  kernel-bios.img  limine.cfg  qemu.config  rust-toolchain.toml  rustc-ice-2024-05-25T15_07_46-23368.txt  test  test.asm
app/: loop.asm  preservation.asm  segfault.asm  stack.asm  yield.asm
app/demo/: Cargo.toml
app/demo/src/: main.rs
app/hello/: Cargo.toml  linker.ld
app/hello/src/: main.rs
apps/: crash.asm  hello.asm  loop.asm
apps/.dist/: hello
cpu/src/: io.rs  lib.rs
files/: hello.txt
files/font/: ter-u12b.psf  ter-u14b.psf  ter-u14v.psf  ter-u18b.psf  ter-u18n.psf  ter-u22n.psf  ter-u24b.psf  ter-u28b.psf  ter-u32b.psf
kernel/: .gitignore  Cargo.toml  GNUmakefile  bacon.toml  build.rs  graphics.c  graphics.h  linker.ld  main.c  rust-toolchain.toml  serial.c  serial.h  watch.sh  x86_64-myos.json
kernel/.cargo/: config.toml
kernel/app/: hello  hello.asm  loop  loop.asm  preservation  preservation.asm  segfault  segfault.asm  sleep  sleep.asm  stack  stack.asm  test1  test1.asm  yeild  yeild.asm
kernel/proptest-regressions/structures/paging/: page_table.txt
kernel/src/: address.rs  alloc.h  alloc_frame.rs  allocator.rs  bench.rs  color.rs  console.rs  core.rs  coredata.rs  debug.rs  debugcon.c  debugcon.h  debugcon.rs  display.c  display.h  display.rs  exception.rs  font.rs  frame_alloc.rs  gdt.rs  gsdata.rs  heap.rs  idt.rs  instructions.rs  interrupts.rs  io.c  io.h  keyboard.rs  lapic.rs  lib.rs  limine.rs  logger.rs  macros.rs  main.c  main.rs  mapper.rs  mapping.rs  mem_ops.c  mem_ops.h  memory.rs  (+20 more)
kernel/src/allocation/: frame.rs  heap.rs  mod.rs  page.rs
kernel/src/common/: console.c  console.h  io.c  io.h  log.c  log.h  memory.c  memory.h  panic.c  panic.h  registers.asm  registers.h  spinlock.c  spinlock.h
kernel/src/disk/: ata.rs  mod.rs
kernel/src/drivers/: acpi.rs  console.rs  debucon.rs  debug_console.rs  display.rs  ioapic.rs  lapic.rs  mod.rs  pic.rs  ps2.rs  psf2.rs  sdt.rs  video_console.rs
kernel/src/drivers/font/: ter-u12n.psf  ter-u16v.psf  ter-u20b.psf  ter-u20n.psf  ter-u22b.psf  ter-u24n.psf  ter-u28n.psf  ter-u32n.psf
kernel/src/graphics/: bitmap.rs  buffer.rs  color.rs  drawable.rs  mod.rs
kernel/src/hardware/: debugcon.rs  display.rs  lapic.rs  mod.rs  pics.rs
kernel/src/instructions/: io.rs  mod.rs
kernel/src/interrupts/: breakpoint.rs  exception.rs  gdt.rs  hardware.rs  idt.rs  mod.rs  syscall.rs  timer.rs  tss.rs
kernel/src/limine/: framebuffer.rs  hhdm.rs  memory_map.rs  mod.rs  module.rs  smp.rs  stack_size.rs
kernel/src/memory/: alloc.c  alloc.h  frame.c  frame.h  frame_alloc.c  frame_alloc.h  frame_alloc.rs  heap.c  heap.h  heap_alloc.rs  mapping.c  mapping.h  memops.c  memops.h  mod.rs  paging.rs
kernel/src/registers/: apic.rs  control.asm  control.h  cr0.rs  cr2.rs  cr3.rs  cr4.rs  fs_gs.rs  mod.rs  msr.rs  rflags.c  rflags.h  rflags.rs
kernel/src/structures/: gdt.asm  gdt.c  gdt.h  gdt.rs  idt.asm  idt.c  idt.h  idt.rs  mmio.rs  mod.rs  paging.c  paging.h  paging.rs
kernel/src/structures/paging/: frame.rs  mod.rs  page.rs  page_table.rs
kernel/src/task/: delay.rs  executor.rs  mod.rs  simple_executor.rs
kernel/src/threading/: manager.rs  mod.rs  state.rs
klib/: Cargo.toml
klib/src/: lib.rs  print.rs
src/: main.rs
stdlib/: Cargo.toml
stdlib/src/: debugcon.rs  lib.rs  macros.rs  prelude.rs  printer.rs  syscall.rs
stdlib/src/syscall/: mod.rs  raw.rs
test-app/: main  main.asm  test_a  test_a.asm  test_b  test_b.asm
