[workspace]
members = ["kernel", "stdlib"]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "forbid"
unused_unsafe = "warn"

[workspace.lints.clippy]
enum_glob_use = "deny"
nursery = "warn"
pedantic = "warn"
missing_const_for_fn = "warn"
semicolon_if_nothing_returned = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }

[package]
name = "my-os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
ovmf-prebuilt = { version = "0.1.0-alpha.1" }

[build-dependencies]
bootloader = "0.11.7"
# kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[build-dependencies.kernel]
path = "kernel"
artifact = "bin"
target = "x86_64-unknown-none"
