[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
strip = true
opt-level = "s"
codegen-units = 1

[profile.dev]
panic = "abort"
opt-level = 0
codegen-units = 1

[dependencies]
limine = "0.2.0"
x86_64 = "0.15.1"
spin = "0.9.8"
pic8259 = "0.11.0"
log = "0.4.21"
linked_list_allocator = "0.10.5"
x2apic = "0.4.3"
noto-sans-mono-bitmap = { version = "0.3.0", default-features = false, features = [
    "size_32",
    "regular",
    "unicode-basic-latin",
    "unicode-specials",
] }
