[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = 3
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
panic = "abort"

[dependencies]
limine = "0.2.0"
x86_64 = "0.15.1"

spin = "0.9.8"
bitflags = "2.5.0"
bit_field = "0.10.2"
volatile = "0.5.4"
crossbeam = { version = "0.8.4", default-features = false, features = [
    "alloc",
] }

[dev-dependencies]
proptest = "1.4.0"
