[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = 3
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
panic = "abort"

[dependencies]
limine = { git = "https://github.com/jasondyoungberg/limine-rs.git", branch = "impl-debug" }
x86_64 = "0.15.1"
spin = "0.9.8"
bitflags = "2.5.0"
bit_field = "0.10.2"
volatile = "0.5.4"
crossbeam = { version = "0.8.4", default-features = false, features = [
    "alloc",
] }
async-channel = { version = "2.3.1", default-features = false }
log = "0.4.21"
acpi = "5.0.0"
